--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,10 +1,25 @@
   <div class="wrapper">
-    <form class="col-md-2" [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+    <form class="col-md-2" (ngSubmit)="onSubmit()" #signInForm="ngForm">
       <h1 class="text-muted">Sign In</h1>
-      <input type="text" formControlName="email" class="form-control" placeholder="Email address">
-      <input type="password" formControlName="password" class="form-control" placeholder="Password">
+
+      <div [hidden]="!error" class="alert alert-danger"> Wrong email or password </div>
+
+      <label for="name">Email</label>
+      <input type="email" class="form-control" id="name" name="email" required
+             [(ngModel)]="user.email" #email="ngModel" email >
+
+      <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
+        <div [hidden]="!email.hasError('required')">Email is required</div>
+        <div [hidden]="email.hasError('required')">Email is not valid</div>
+      </div>
+
+      <label for="name">Password</label>
+      <input type="password" class="form-control" id="password" name="password" required
+             [(ngModel)]="user.password" #password="ngModel" >
+      <div [hidden]="password.valid || password.pristine" class="alert alert-danger"> Password is required </div>
+
       <div class="form-group actions">
-        <button type="submit" [disabled]="signInForm.pristine" class="btn btn-primary">Sign In</button>
+        <button type="submit" [disabled]="!signInForm.form.valid" class="btn btn-primary">Sign In</button>
         <a [routerLink]="['/sign-up']" class="btn btn-link">Register</a>
       </div>
     </form>
