--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -14,9 +14,12 @@
       </div>
 
       <label for="name">Password</label>
-      <input type="password" class="form-control" id="password" name="password" required
+      <input type="password" class="form-control" id="password" name="password" required minlength="4"
              [(ngModel)]="user.password" #password="ngModel" >
-      <div [hidden]="password.valid || password.pristine" class="alert alert-danger"> Password is required </div>
+      <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+        <div [hidden]="!password.hasError('required')">Password is required</div>
+        <div [hidden]="!password.hasError('minlength')">Min length 4 characters</div>
+      </div>
 
       <div class="form-group actions">
         <button type="submit" [disabled]="!signInForm.form.valid" class="btn btn-primary">Sign In</button>
