--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,3 +1,47 @@
-<p>
-  sign-up works!
-</p>
+<div class="wrapper">
+  <form class="col-md-2" [formGroup]="signUpForm" (ngSubmit)="onSubmit()" novalidate>
+    <h1 class="text-muted">Sign Up</h1>
+
+    <div [hidden]="!message" class="alert alert-danger"> {{message}} </div>
+
+    <div class="form-group">
+      <label class="center-block">Email:
+        <input class="form-control" formControlName="email">
+      </label>
+      <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+        <div *ngIf="email.errors.required">
+          Email is required.
+        </div>
+        <div *ngIf="!email.errors.required">
+          Email is not valid.
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="center-block">Password:
+        <input class="form-control" formControlName="password">
+      </label>
+      <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+        <div *ngIf="password.errors.required">
+          Email is required.
+        </div>
+        <div *ngIf="password.errors.minlength">
+          Min length 4 characters.
+        </div>
+        <div *ngIf="!password.errors.required && !password.errors.minlength">
+          Email is not valid.
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="center-block">Name:
+        <input class="form-control" formControlName="userName">
+      </label>
+    </div>
+    <div class="form-group actions">
+      <button type="submit" [disabled]="signUpForm.invalid" class="btn btn-primary">Sign Up</button>
+      <a [routerLink]="['/sign-in']" class="btn btn-link">Sign In</a>
+    </div>
+  </form>
+</div>
