--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -24,13 +24,10 @@
       </label>
       <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
         <div *ngIf="password.errors.required">
-          Email is required.
+          Password is required.
         </div>
         <div *ngIf="password.errors.minlength">
           Min length 4 characters.
-        </div>
-        <div *ngIf="!password.errors.required && !password.errors.minlength">
-          Email is not valid.
         </div>
       </div>
     </div>
