--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,16 @@
-<p>
-  home works!
-</p>
+<div class="wrapper">
+  <ol>
+    <li>
+      <md-form-field>
+        <input mdInput [(ngModel)]="name" placeholder="What's your name?">
+      </md-form-field>
+    </li>
+    <li>
+      <button md-raised-button (click)="openDialog()">Pick one</button>
+    </li>
+    <li *ngIf="animal">
+      You chose: <i>{{animal}}</i>
+    </li>
+  </ol>
+</div>
 
-<ol>
-  <li>
-    <md-form-field>
-      <input mdInput [(ngModel)]="name" placeholder="What's your name?">
-    </md-form-field>
-  </li>
-  <li>
-    <button md-raised-button (click)="openDialog()">Pick one</button>
-  </li>
-  <li *ngIf="animal">
-    You chose: <i>{{animal}}</i>
-  </li>
-</ol>
