--- a/src/app/shared/modals/basic-modal/basic-modal.component.html
+++ b/src/app/shared/modals/basic-modal/basic-modal.component.html
@@ -7,11 +7,11 @@
 
 <div md-dialog-content>
   <p>What's your favorite animal?</p>
-  <md-form-field>
-    <input mdInput tabindex="1" [(ngModel)]="data.animal">
+  <md-form-field class="modal_input">
+    <input  mdInput tabindex="1" [(ngModel)]="data.animal">
   </md-form-field>
 </div>
 <div md-dialog-actions>
-  <button md-raised-button [md-dialog-close]="data.animal" tabindex="2">Ok</button>
-  <button md-raised-button (click)="onNoClick()" tabindex="-1">No Thanks</button>
+  <button class="modal_button" md-raised-button [md-dialog-close]="data.animal" tabindex="2">Ok</button>
+  <button class="modal_button" md-raised-button (click)="onNoClick()" tabindex="-1">No Thanks</button>
 </div>
